--- a/Lab2/page c/index.html
+++ b/Lab2/page c/index.html
@@ -81,34 +81,34 @@
             </div>
         </div>
     </div>
-    <div id="hidden_pix_1" class="confirm_page confirm_page_1 pix_builder_bg">
-        <div class="pixfort_normal_1">
-            <div class="confirm_logo">
-                <span class="conf_img">
-                    <img src="images/video/confirm1.png" alt="">
-                </span>
-            </div>
-            <div class="confirm_header">
-                <span class="editContent">
-                    <span class="pix_text">THANK YOU FOR SUBSCRIPTION</span>
-                </span>
-            </div>
-            <div class="confirm_text">
-                <span class="editContent">
-                    <span class="pix_text">Our service is astonishingly thin and light.</span>
-                </span>
-            </div>
-            <div class="confirm_social">
-                <div class="confirm_social_box pix_builder_bg">
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="pixfort" data-count="none">Tweet</a>
-                        <span class="confirm_gp">
-                            <span class="g-plusone " data-size="medium" data-annotation="none"></span>
-                        </span>
-                    <div class="fb-like" data-href="http://themeforest.net/item/flatpack-landing-pages-pack-with-page-builder/10591107" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>
-                </div>
-            </div>
-        </div>
-    </div>
+<!--    <div id="hidden_pix_1" class="confirm_page confirm_page_1 pix_builder_bg">-->
+<!--        <div class="pixfort_normal_1">-->
+<!--            <div class="confirm_logo">-->
+<!--                <span class="conf_img">-->
+<!--                    <img src="images/video/confirm1.png" alt="">-->
+<!--                </span>-->
+<!--            </div>-->
+<!--            <div class="confirm_header">-->
+<!--                <span class="editContent">-->
+<!--                    <span class="pix_text">THANK YOU FOR SUBSCRIPTION</span>-->
+<!--                </span>-->
+<!--            </div>-->
+<!--            <div class="confirm_text">-->
+<!--                <span class="editContent">-->
+<!--                    <span class="pix_text">Our service is astonishingly thin and light.</span>-->
+<!--                </span>-->
+<!--            </div>-->
+<!--            <div class="confirm_social">-->
+<!--                <div class="confirm_social_box pix_builder_bg">-->
+<!--                    <a href="https://twitter.com/share" class="twitter-share-button" data-via="pixfort" data-count="none">Tweet</a>-->
+<!--                        <span class="confirm_gp">-->
+<!--                            <span class="g-plusone " data-size="medium" data-annotation="none"></span>-->
+<!--                        </span>-->
+<!--                    <div class="fb-like" data-href="http://themeforest.net/item/flatpack-landing-pages-pack-with-page-builder/10591107" data-layout="button" data-action="like" data-show-faces="false" data-share="false"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
     <div class="section_pointer" pix-name="video"></div><div class="pixfort_university_6" id="section_university_5">
             <div class="join_us_section pix_builder_bg">
                <div class="container">
@@ -416,22 +416,22 @@
 </div><!-- container -->
 </div>
 </div>
-<div id="hidden_pix_6" class="confirm_page confirm_page_6 pix_builder_bg">
-  <div class="pixfort_university_6">
-      
-      <div class="confirm_header"><span class="editContent"><span class="pix_text">Thank You Very Much!</span></span></div>
-      <div class="confirm_text">
-        <span class="editContent"><span class="pix_text">Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt.</span></span>
-    </div>
-    <div class="center_text padding_bottom_60">
-        <ul class="bottom-icons confirm_icons center_text big_title pix_inline_block">
-            <li><a class="pi pixicon-facebook6 white" href="#fakelink"></a></li>
-            <li><a class="pi pixicon-twitter6 white" href="#fakelink"></a></li>
-            <li><a class="pi pixicon-googleplus7 white" href="#fakelink"></a></li>
-        </ul>
-    </div>
-</div>
-</div>
+<!--<div id="hidden_pix_6" class="confirm_page confirm_page_6 pix_builder_bg">-->
+<!--  <div class="pixfort_university_6">-->
+<!--      -->
+<!--      <div class="confirm_header"><span class="editContent"><span class="pix_text">Thank You Very Much!</span></span></div>-->
+<!--      <div class="confirm_text">-->
+<!--        <span class="editContent"><span class="pix_text">Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt.</span></span>-->
+<!--    </div>-->
+<!--    <div class="center_text padding_bottom_60">-->
+<!--        <ul class="bottom-icons confirm_icons center_text big_title pix_inline_block">-->
+<!--            <li><a class="pi pixicon-facebook6 white" href="#fakelink"></a></li>-->
+<!--            <li><a class="pi pixicon-twitter6 white" href="#fakelink"></a></li>-->
+<!--            <li><a class="pi pixicon-googleplus7 white" href="#fakelink"></a></li>-->
+<!--        </ul>-->
+<!--    </div>-->
+<!--</div>-->
+<!--</div>-->
     <div class="pixfort_ecourse_8" id="section_ecourse_7">
 
 		<div class="foot_st pix_builder_bg">
@@ -448,9 +448,9 @@
 						<div class="socbuttons">
 							<div class="soc_icons pix_builder_bg">
 								<ul class="bottom-icons">
-		                            <li><a class="pi pixicon-facebook2 normal_gray" href="#fakelink"></a></li>
-		                            <li><a class="pi pixicon-twitter2 normal_gray" href="#fakelink"></a></li>
-		                            <li><a class="pi pixicon-instagram normal_gray" href="#fakelink"></a></li>
+		                            <li><a class="pi pixicon-facebook2 normal_gray" href="#fakelink"><i class="fa-brands fa-facebook"></i></a></li>
+		                            <li><a class="pi pixicon-twitter2 normal_gray" href="#fakelink"><i class="fa-brands fa-twitter"></i></a></li>
+		                            <li><a class="pi pixicon-instagram normal_gray" href="#fakelink"><i class="fa-brands fa-instagram"></i></a></li>
 		                        </ul>
 							</div>
 							<div class="likes_st"><span class="editContent"><span class="pix_text">Your likes &amp; share makes us happy!</span></span></div>
