--- a/Lab3/Lab3_2/index.html
+++ b/Lab3/Lab3_2/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="page">
     <section class="contact" id="contact">
-      <h1 class="heading">Contanct US</h1>
+      <h1 class="heading">Contact US</h1>
       <div class="">
         <form action="">
           <div class="row name">
@@ -46,7 +46,7 @@
           </div>
 
           <div class="col submit">
-            <button type="submit">Submit-></button>
+            <button type="submit">Submit &#8594;</button>
           </div>
 
 
